# CLST

./: CHANGELOG.md  console.txt  index.html  mtr_cloudflare.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src/assets/audio/: README.txt
src/assets/styles/: base.css  checkin.css  configuration.css  dashboard.css  main.css  results.css
src/components/: ConfigurationScreen.ts  Dashboard.ts  PreSessionCheckin.ts  ResultsView.ts
src/lib/: audioManager.ts  canvas2dRenderer.ts  database.ts  metricsCalculator.ts  scoringEngine.ts  statistics.ts  testEngine.ts  testRenderer.ts
src/types/: index.ts
src/views/: MainApp.ts
