[package]
name = "clst"
version = "0.3.0"
description = "Cognitive Load Stress Test"
authors = ["Pascal"]
edition = "2021"

[lib]
name = "clst_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true
